# ports2plan9

./: README
.hg/: dirstate  hgrc  undo.desc
.hg/cache/: branchheads  tags
.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i  fncache  undo
Apache/apr-1/: README.Plan9  apr-config.ape  confdefs.h  config.nice  configure.help  mkfile
Apache/apr-iconv/: Makefile  README.Plan9  config.status  configure  configure.help  iconv.rc  mkfile
Apache/apr-util/: Makefile  README.Plan9  apr-util.pc  apu-1-config  buildconf  config.nice  config.status  configure  configure.help  export_vars.sh  mkfile
BASIC/BaCon/: README.Plan9  bacon  mkfile
BSD/bmake/: config.h  mkfile
BSD/db/: README.Plan9  bt_open.c  bt_seq.c  db.h  extern_rec.h  features.h  hash.c  hash_bigkey.c  hash_buf.c  hash_func.c  hash_page.c  mkfile  rec_close.c  rec_open.c  recno.h
BSD/libedit/: Makefile  README.Plan9  config.h  config.status  config.sub  configure  configure.help  libedit.pc  libtool  mkfile
BSD/mksh/: README.Plan9  Rebuild.sh  main.c  mkfile  sh.h  test.sh
GNU/: README.Plan9
GNU/clzip/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.in  NEWS  README  README.Plan9  carg_parser.c  carg_parser.h  clzip.h  configure  decoder.c  decoder.h  encoder.c  encoder.h  main.c  mkfile  stdint.h
GNU/gawk/: README.Plan9  custom.h  main.c
GNU/gcc-apelibs/: README  mkfile
GNU/gmake/: Makefile  Makefile.in  README.Plan9  ar.c  build.sh  build.sh.in  config.h  config.status  configure  default.c  getopt.c  gmake.rc  main.c  mkfile
GNU/gsed/: gsed.rc  mkfile
GNU/libsigsegv/: Makefile  Makefile.in  REAMDE.Plan9  aclocal.m4  config.h  config.status  configure  libtool
GNU/libutf8/: Makefile  Makefile.devel  Makefile.in  NEWS  README.Plan9  config.cache  config.status  configure  configure.help  configure.in  libtool
GNU/libutf8/autoconf/: acgeneral.m4  aclocal.m4  config.sub  ltconfig  ltmain.sh
GNU/libutf8/extras/: c_ident.c  wcwidth.c
GNU/libutf8/include/utf8/: config.h  config.h.in  types.h  types.h.in  wchar.h.in
GNU/libutf8/man/: Makefile  Makefile.in  TODO
GNU/libutf8/src/: Makefile  Makefile.devel  Makefile.in  config.h  config.h.in  gentables.c  libc.c  libc.h  locale_is.c  mb_cur_max.c  mbsinit.c  setlocale.c  sysdep-alloca.h
GNU/libutf8/src/attribute/: attribute.c  iswalnum.c  iswalpha.c  iswblank.c  iswcntrl.c  iswctype.c  iswdigit.c  iswgraph.c  iswlower.c  iswprint.c  iswpunct.c  iswspace.c  iswupper.c  iswxdigit.c  wcswidth.c  wctype.c  wcwidth.c
GNU/libutf8/src/caseconv/: towctrans.c  towlower.c  towupper.c  wcscasecmp.c  wcsncasecmp.c  wctrans.c
GNU/libutf8/src/mbstowcs/: mblen.c  mbrlen.c  mbrtowc.c  mbsnrtowcs.c  mbsrtowcs.c  mbstowcs.c  mbtowc.c
GNU/libutf8/src/number/: integer-parse.c  integer-parse.h  number-parse.c  number-parse.h  wcstod.c  wcstof.c  wcstol.c  wcstold.c  wcstoll.c  wcstoul.c  wcstoull.c
GNU/libutf8/src/stdio/: fgetwc.c  fgetws.c  fprintf.c  fputwc.c  fputws.c  fwide.c  fwprintf.c  getwchar.c  printf-args.c  printf-args.h  printf-parse.c  printf-parse.h  printf.c  putwchar.c  snprintf.c  sprintf.c  swprintf.c  ungetwc.c  vfprintf.c  vfwprintf.c  vprintf.c  vsnprintf.c  vsprintf.c  vswprintf.c  vwprintf.c  wprintf-parse.c  wprintf-parse.h  wprintf.c
GNU/libutf8/src/trad-mbstowcs/: btowc.c  mblen.c  mbrlen.c  mbrtowc.c  mbsnrtowcs.c  mbsrtowcs.c  mbstowcs.c  mbtowc.c
GNU/libutf8/src/trad-wcstombs/: wcrtomb.c  wcsnrtombs.c  wcsrtombs.c  wcstombs.c  wctob.c  wctomb.c
GNU/libutf8/src/wcstombs/: wcrtomb.c  wcsnrtombs.c  wcsrtombs.c  wcstombs.c  wctomb.c
GNU/libutf8/src/wstring/: wcpcpy.c  wcpncpy.c  wcscat.c  wcschr.c  wcscmp.c  wcscpy.c  wcscspn.c  wcsdup.c  wcslen.c  wcsncat.c  wcsncmp.c  wcsncpy.c  wcsnlen.c  wcspbrk.c  wcsrchr.c  wcsspn.c  wcsstr.c  wcstok.c  wmemchr.c  wmemcmp.c  wmemcpy.c  wmemmove.c  wmemset.c
GNU/ncurses/: Makefile  README.Plan9  config.status  config.sub  configure  configure.help  edit_man.sh  man_alias.sed
GNU/pth/: INSTALL  Makefile  README.Plan9  config.status  config.sub  configure  libtool  mkfile  mkfile.pthread  pth_attr.c  pth_mctx.c
GNU/which/: Makefile  README.Plan9  config.h  config.status  configure  configure.help  maintMakefile  mkfile  which.c
KTH/: README
KTH/c-ares/: Makefile  README.Plan9  ares_build.h  ares_config.h  config.status  configure  libtool  mkfile
KTH/curl/: Makefile  README.Plan9  config.status  configure  configure.help  curl-config  libcurl.pc  libtool  mkfile
KTH/libssh2/: Makefile  README.Plan9  config.status  configure  configure.help  libtool  (+2 more)
ObjC/objc/: Changes.txt  Install.txt  Intro.txt  Makefile  Makefile.in  Platform.txt  Readme.txt  bootSrc  config.status  configure  configure.in  configure.plan9  manual.html  mkfile
ObjC/objc/DependencyGraph/: mGraph.m
ObjC/objc/examples/: Makefile  Makefile.in  classvars.m  poseAs.m
ObjC/objc/include/cakit/: cseq.h  fraction.h  matrix.h  monomial.h  polynom.h  term.h  vector.h
ObjC/objc/include/objcrt/: Block.h  Object.h  objcrt.h
ObjC/objc/include/objpak/: ocstring.h
ObjC/objc/man/man1/: objc.1  vici.1
ObjC/objc/src/cakit/: Makefile  Makefile.in  cseq.h  cseq.m  fraction.h  fraction.m  matrix.h  matrix.m  matsq.h  matsq.m  monomc.h  monomc.m  monomial.h  monomial.m  polc.h  polc.m  polynom.h  polynom.m  polyrseq.h  polyrseq.m  term.h  term.m  vector.h  vector.m
ObjC/objc/src/objc/: Makefile  Makefile.in  lex.lm  objc  objc.in  objc.m  objc.m.in  objc1.m  objcdlso.ld  yacc.ym
ObjC/objc/src/objcrt/: Block.h  Block.m  Makefile  Makefile.in  Object.h  Object.m  config.h  objcrt.h  objcrt.m
ObjC/objc/src/objpak/: Makefile  Makefile.in  config.h  ocstring.h  ocstring.m
ObjC/objc/src/oclib/: Makefile  Makefile.in  datadef.m  deref.m  options.h  options.m  pfixdecl.m  scalar.m
ObjC/objc/words/: Makefile
compression/: README
flex/: lex.rc  mkfile
fortran/: fc
gui/: README
json-c/: Makefile.am  README.Plan9  config.h  debug.h  json_object.c  json_object.h  json_object_private.h  json_tokener.c  json_tokener.h  json_util.c  mkfile  printbuf.c  test1.c
porting-tools/: README.Plan9
(+23564 files in other folders)
